refactor(core): 优化插件管理与ClassLoader资源释放机制
- 调整插件Spring上下文隔离设计，增强零信任与干净卸载能力
- PluginInstance中断引用链，防止ClassLoader泄漏
- PluginLifecycleManager同步等待运行实例结束，避免异步清理不及时
- 引入ResourceGuard进行资源清理和泄漏检测，支持ClassLoader关闭
- InvocationExecutor切换线程上下文加载器，执行后恢复原状态
- PluginClassLoader增强对URLClassLoader内部缓存的反射清理
- PluginRuntime shutdown时断开所有子组件引用，释放资源
- ServiceRegistry主动断开InvokableService引用链，防止内存泄漏
- 引入插件线程池预算管理，限制单插件及全局线程数，防止资源过度消耗
- PluginManager维护线程预算，全局分配与回收插件线程资源
- 升级docs，完善架构说明，优化隔离机制描述及示例用语调整